--- a/css/adriano-castro.css
+++ b/css/adriano-castro.css
@@ -19,9 +19,12 @@ body {
 
 .bg-title {
     /* background-image: linear-gradient(to bottom right, #192a56, #40739e); */
-    background: url('../img/banner.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
+    background: url('../img/banner.jpg') center center no-repeat;    
+}
+
+.mdi-adriano {
+    color: #8e44ad;
+    font-size: 20rem;
 }
 
 .bg-footer {
