--- a/css/adriano-castro.css
+++ b/css/adriano-castro.css
@@ -7,26 +7,24 @@ body {
 
 .text-title {
     font-family: 'Akronim', cursive;
-    font-size: 8em;
+    font-size: 8rem;
     color: #fff;
 }
 
 .text-subtitle {
     font-family: 'Raleway', sans-serif;
-    font-size: 2em;
+    font-size: 2rem;
     color: #fff;
 }
 
 .bg-title {
-    /* background-image: linear-gradient(to bottom right, #192a56, #40739e); */
-    background: url('../img/banner.jpg') center center no-repeat;    
-}
-
-.mdi-adriano {
-    color: #8e44ad;
-    font-size: 20rem;
+    background: url('../img/banner.jpg') center center no-repeat;
 }
 
 .bg-footer {
     background: #2c3e50;
+}
+
+.bg-nav {
+    background-image: linear-gradient(to bottom right, #192a56, #40739e);
 }
