--- a/css/adriano-castro.css
+++ b/css/adriano-castro.css
@@ -17,8 +17,24 @@ body {
     color: #fff;
 }
 
+.text-title-xs {
+    font-family: 'Akronim', cursive;
+    font-size: 4rem;
+    color: #fff;
+}
+
+.text-subtitle-xs {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
+    color: #fff;
+}
+
 .bg-title {
     background: url('../img/banner.jpg') center center no-repeat;
+}
+
+.bg-title-xs {
+    background-image: linear-gradient(to bottom right, #192a56, #40739e);
 }
 
 .bg-footer {
